--- a/src/app/dialogue/confirm-dialogue/confirm-dialogue.component.html
+++ b/src/app/dialogue/confirm-dialogue/confirm-dialogue.component.html
@@ -1,8 +1,10 @@
-<h2 mat-dialog-title>{{ data.title }}</h2>
-    <mat-dialog-content>
-      {{ data.message }}
-    </mat-dialog-content>
-    <mat-dialog-actions>
-      <button mat-button (click)="onNoClick()">Cancel</button>
-      <button mat-button color="warn" (click)="onConfirm()" cdkFocusInitial>Logout</button>
-    </mat-dialog-actions>
+<div class="dialog-container">
+  <h2 mat-dialog-title class="dialog-title">{{ data.title }}</h2>
+  <mat-dialog-content class="dialog-content">
+    {{ data.message }}
+  </mat-dialog-content>
+  <mat-dialog-actions class="dialog-actions">
+    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button mat-button color="warn" (click)="onConfirm()" cdkFocusInitial>Logout</button>
+  </mat-dialog-actions>
+</div>
