--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -57,6 +57,11 @@
                         <i class="bi bi-newspaper me-2"></i> News Management
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/negotiation-questions" routerLinkActive="active" (click)="closeSidebarOnMobile()">
+                        <i class="bi bi-chat-square-text me-2"></i> Negotiation Questions
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
